Fixed some styling (auto padding, alignments)

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,6 +19,9 @@
 
  body{
    background-image: url("knitting250px.png");
+   font-family: helvetica;
+   padding: 0;
+   margin: 0;
  }
 
  header{
@@ -53,7 +56,6 @@
    top: 0;
    width: 100%;
    height: 20px;
-   margin: 0 auto;
    padding-top: 3px;
    border-bottom: solid white 2px;
    display: block;
